# xNVSE

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: SourceList.cmake  xNVSE.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/nvse/: CMakeLists.txt  EventManager.h
